generator client {
  provider = "prisma-client-js"
}

generator jsonSchema {
  provider = "prisma-json-schema-generator"
  output   = "../src/swagger/schemas"
}

generator dbml {
  provider = "prisma-dbml-generator"
}

datasource db {
  provider = "mysql"
  url      = env("DATABASE_URL")
}

model brandMaster {
  idBrandMaster Int       @id @default(autoincrement())
  brandName     String?
  isActive      Boolean?  @default(true)
  createdAt     DateTime? @default(now()) @db.DateTime(0)
  updatedAt     DateTime? @default(now()) @db.DateTime(0)
  deletedAt     DateTime? @db.DateTime(0)
  brandLogo     String?
  domain        String?
  city          String?
  emailContact  String?
  fieldName     String?
  location      String?
  setorName     String?
  smsContact    String?
  timezone      String?
  placeNumber   String?
  state         String?
  street        String?
  cnpj          String?
  cep           String?
  cityCode      Int?
  district      String?
  stripeUserId  String?
  isPoc         Boolean?  @default(false)
  contract      String?
  contractAt    DateTime? @db.DateTime(0)
  pocOpenedAt   DateTime? @db.DateTime(0)
  manual                   String?
  termsOfUse               String?
  privacyPolicy            String?
  discountRate             Float?
  minConsumption           Float?
  vM                       vM[]
  users                    user[]
}

model vM {
  idVM          Int            @id @default(autoincrement())
  vmName        String?
  vCPU          Int
  ram           Int
  disk          Int
  hasBackup     Boolean?       @default(false)
  idBrandMaster Int?
  status        EVMStatus?
  createdAt     DateTime?      @default(now()) @db.DateTime(0)
  updatedAt     DateTime?      @default(now()) @db.DateTime(0)
  deletedAt     DateTime?      @db.DateTime(0)
  os            String?
  pass          String?
  location      ETaskLocation?
  brandMaster   brandMaster?   @relation(fields: [idBrandMaster], references: [idBrandMaster])

  @@index([idBrandMaster], map: "vM_idBrandMaster_fkey")
}

model user {
  idUser          String    @id @default(uuid())
  username        String    @unique
  password        String
  email           String    @unique
  profileImgUrl   String?
  fullName        String?
  userPhoneNumber String?
  role            ERole     @default(member)
  idBrandMaster   Int?
  isActive        Boolean?  @default(true)
  lastLoginDate   DateTime? @db.DateTime(0)
  createdAt       DateTime? @default(now()) @db.DateTime(0)
  updatedAt       DateTime? @default(now()) @db.DateTime(0)
  deletedAt       DateTime? @db.DateTime(0)

  brandMaster brandMaster? @relation(fields: [idBrandMaster], references: [idBrandMaster])

  @@index([idBrandMaster], map: "user_idBrandMaster_fkey")
}

enum EVMStatus {
  RUNNING
  STOPPED
  PAUSED
}

enum ERole {
  admin
  manager
  member
}

enum ETaskLocation {
  bre_barueri
  usa_miami
}
